--- a/sampleprj/sample_pipe2.yaml
+++ b/sampleprj/sample_pipe2.yaml
@@ -1,17 +1,14 @@
 vars:
-  workspace: '/Users/juha/work/getpipeline/.venv'
-  virtualenv_dir: '/Users/juha/work/getpipeline/.venv'
+  workdir: '/Users/juha/work/pipelines'
 
 configuration:
   webhook_url: 'https://hooks.slack.com/services/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'
 
 tasks:
  - type: bash
-   cmd: "cd {{workspace}} && echo 'Starting' >> logfile.txt"
+   cmd: 'echo blah'
+ - "echo blah2"
  - type: python
-   virtualenv: "{{virtualenv_dir}}"
-   workdir: "{{workspace}}"
-   script: test_script.py
-
-plugins:
-  - webhook_logger
+   script: 'test/test_script.py'
+   virtualenv: '{{ workdir }}/.venv'
+   workdir: '{{ workdir }}'
