Get logs and status api endpoints with more tests.

--- a/api/workspace/sample_pipe2.yaml
+++ b/api/workspace/sample_pipe2.yaml
@@ -3,7 +3,7 @@ vars:
   log_file: somelogfile.log
   status_file: somestatusfile.json
 tasks:
- - "find .."
+ - "find ."
 plugins: []
 # - file_logger
 # - status_logger
