--- a/fixtures/workspace/sample-deploy.yaml
+++ b/fixtures/workspace/sample-deploy.yaml
@@ -16,7 +16,7 @@ triggers:
 actions:
  - type: bash
    cmd: echo ansible-playbook deploy.yml -i hosts -u root -k -v --extra-vars "branch={{ code_branch }}"
- - type: slack
-   message: 'Deployed !!'    # "Depoyed {{ code_branch }} with status {{ tasks.0.status }}!" # Big question: how do we format and assign stdout
+# - type: slack
+#   message: 'Deployed !!'    # "Depoyed {{ code_branch }} with status {{ tasks.0.status }}!" # Big question: how do we format and assign stdout
 #   always_run: true
- - 'echo "done"'
+# - 'echo "done"'
