Add missing npm dependency.

--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react": "0.14.6",
     "react-bootstrap": "0.29.3",
     "react-dom": "0.14.6",
+    "react-syntax-highlight": "0.0.2",
     "superagent": "1.8.3",
     "webpack": "1.13.0"
   },
