Add support for on_task_event to stream data from tasks. #25

--- a/fixtures/workspace/long_running_task.yaml
+++ b/fixtures/workspace/long_running_task.yaml
@@ -14,5 +14,5 @@ triggers: []
 
 actions:
  - 'echo "Pre sleep task"'
- - sleep 30
+ - "echo 'from time import sleep\nfor a in range(20):\n  print \"test\"\n  sleep(2)' | python"
  - 'echo "Post sleep task"'
