--- a/test/fixtures/workspace/sample-deploy.yaml
+++ b/test/fixtures/workspace/sample-deploy.yaml
@@ -9,6 +9,12 @@ triggers:
 prompt:
  code_branch: dev
  your_name: ''
+ test1:
+   type: select
+   options:
+    - 'Abba'
+    - 'Abba2'
+    - 'Abba3'
 
 actions:
  - 'ls -la'
