--- a/etc/supervisor/pipelines.conf
+++ b/etc/supervisor/pipelines.conf
@@ -1,5 +1,6 @@
 [program:pipelines]
-command=/usr/local/bin/pipelines api
+command=/usr/local/bin/pipelines server --host 0.0.0.0 --port 8888 --username admin --password admin 
+environment=HOME=/var/lib/pipelines
 autostart=true
 user=pipelines
 
