Fixes on tests.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ venv
 dist/*
 !pipelines/api/app_dist/client/dist/bundle.min.js
 bundle.min.js
+
+!test/fixtures/workspace/sample-deploy/
+test/fixtures/workspace/sample-deploy/*
