--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "ejs": "2.4.1",
     "express": "4.13.4",
     "express-ejs-layouts": "2.0.0",
+    "idempotent-babel-polyfill": "0.1.1",
     "moment": "2.15.1",
     "react": "0.14.6",
     "react-dom": "0.14.6",
