--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "idempotent-babel-polyfill": "0.1.1",
     "moment": "2.15.1",
     "react": "0.14.6",
+    "react-document-title": "2.0.3",
     "react-dom": "0.14.6",
     "react-syntax-highlight": "0.0.2",
     "superagent": "1.8.3",
