--- a/test/fixtures/workspace/python-task-testing.yaml
+++ b/test/fixtures/workspace/python-task-testing.yaml
@@ -1,8 +1,8 @@
 actions:
- - type: python
-   script: 'print "test"'
- - type: python
-   script: |
-     import json
-     a = {'test': 'value', 'array': [1,2,3]}
-     print json.dumps(a, indent=2)
+  - type: python
+    script: 'print("test")'
+  - type: python
+    script: |
+      import json
+      a = {'test': 'value', 'array': [1,2,3]}
+      print(json.dumps(a, indent=2))
