--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
-futures==3.0.5
-Jinja2==2.8
-PyYAML==3.11
-requests==2.9.1
-sh==1.11
-tornado==4.3
+certifi==2021.10.8
+charset-normalizer==2.0.9
+contextlib2==21.6.0
 docopt==0.6.2
-schema==0.5.0
-dotmap==1.2.0
-filelock==2.0.6
+dotmap==1.3.26
+filelock==3.4.0
+futures==2.2.0
+idna==3.3
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+PyYAML==6.0
+requests==2.26.0
+schema==0.7.5
+sh==1.14.2
+tornado==6.1
+urllib3==1.26.7
 
 #
 # Dev
+#
 #
 mock
 nose
