use pipenv to manage dependencies
- remove requiements.txt, it causes depending on indirect dependencies
- use pipenv to install dependencies
- use pipenv-sync to sync Pipefile.lock to setup.py
- update Makefile to adapt virtualenv
- pipelines can still install by pip install
- update README and For-developers doc

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ assets.json
 .DS_Store
 
 venv
+.venv/
 
 dist/*
 !pipelines/api/app_dist/client/dist/bundle.min.js
@@ -19,3 +20,8 @@ bundle.min.js
 
 !test/fixtures/workspace/sample-deploy/
 test/fixtures/workspace/sample-deploy/*
+
+/build/
+/ws/
+
+local.mk
