simplify dev server
merge express at 3001 and dev-server at 3000 into one dev-server

--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "start": "node index",
+    "start": "node dev-server.js",
     "dist": "cross-env NODE_ENV=production webpack --progress"
   },
   "keywords": [],
