--- a/app/package.json
+++ b/app/package.json
@@ -53,12 +53,14 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "assets-webpack-plugin": "^7.1.1",
-    "autoprefixer-loader": "3.2.0",
+    "autoprefixer": "^10.4.5",
     "babel-loader": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
