--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.0.0",
+    "@babel/runtime-corejs3": "^7.17.9",
     "bourbon": "^7.2.0",
     "compression": "^1.7.4",
+    "core-js": "^3.22.3",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
     "express-ejs-layouts": "^2.5.1",
@@ -64,7 +65,7 @@
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "4.9.2",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   }
 }
