refactor ghauth handler, get rid of callback style codes
- remove `return_future` and `_auth_return_future` as they are removed in tornado 6.x
- refactor GithubOAuth2Mixin with `tornado.gen.coroutine`
- upgrade tornado to 6.1
- support `PROXY_HOST` and `PROXY_PORT` in ghauth handler
- add pycurl to dev-dependencies because proxy is only supported
  in `tornado.curl_httpclient.CurlAsyncHTTPClient`

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ filelock = "==3.4.0"
 requests = "==2.26.0"
 schema = "==0.7.5"
 sh = "==1.14.2"
-tornado = "==5.1.1"
+tornado = "==6.1"
 Jinja2 = "==3.0.3"
 PyYAML = "==6.0"
 
@@ -24,6 +24,7 @@ coverage = "*"
 autopep8 = "*"
 pipenv-setup = "*"
 pylint = "*"
+pycurl = "*"
 
 [requires]
 python_version = "3"
